@@ -236,7 +236,7 @@
 
  As in sasl driver this one allows to change password using shell
  utility called "virtualmin". See helpers/chgvirtualminpasswd.c for
- installation instructions. See also config.inc.php.dist file.
+ installation instructions. Requires virtualmin >= 4.09.
 
 
  2.9. hMailServer (hmail)
